[package]
name = "octopus"
version = "0.1.0"
edition = "2018"

[[test]]
name = "tests"
harness = false

[dependencies]
reqwest = {version = "0.11.0", features = ["json"]}
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
tokio = {version = "1.1.1", features = ["full"]}
base64 = "0.13.0"
http = "0.2.4"
sha2 = "0.9.8"
hmac = "0.10.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
anyhow = "1.0.44"
cucumber_rust = "0.9"
chrono = "0.4"
